// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`estimateCost - Zone > render region component, with animation 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_default__1pgyf3t10 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_1rem_xxsmall__toi52u3v"
    >
      <div
        class="styles__1pgyf3tu styles_inView_false__1pgyf3tv"
        data-testid="summary-overlay"
        style="--_1pgyf3t1: 0;"
      >
        <ul
          class="styles__1pgyf3tx"
        >
          <li
            class="styles__1pgyf3tk styles_isFirstElement_true__1pgyf3tm"
          >
            <div
              class="styles__1pgyf3t9"
              style="--_1pgyf3t0: 16px;"
            >
              <div
                class=""
              >
                <div
                  class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d"
                >
                  <div
                    class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
                  >
                    <p
                      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
                    >
                      Availability Zone
                    </p>
                  </div>
                </div>
                <div
                  class="components__1oy0ow48 components_isAnimated_true__1oy0ow49 components_isOverlay_true__1oy0ow4b"
                >
                  <div
                    class="components__1oy0ow4h components_isOverlay_false__1oy0ow4i components_variant_normal__1oy0ow4m components__1oy0ow4o components_variant_normal__1oy0ow4r"
                  >
                    <img
                      alt="nl-ams-1"
                      class="styles__1pgyf3t2"
                      height="auto"
                      src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20fill='none'%20viewBox='0%200%2024%2024'%3e%3cpath%20fill='%23F0F0F0'%20d='M12%2024c6.627%200%2012-5.373%2012-12S18.627%200%2012%200%200%205.373%200%2012s5.373%2012%2012%2012'/%3e%3cpath%20fill='%23D80027'%20d='M24%2012c0-5.16-3.256-9.558-7.826-11.254v22.508C20.744%2021.558%2024%2017.16%2024%2012'/%3e%3cpath%20fill='%230052B4'%20d='M0%2012c0%205.16%203.257%209.558%207.826%2011.254V.746C3.256%202.442%200%206.84%200%2012'/%3e%3c/svg%3e"
                      width="auto"
                    />
                    nl-ams-1
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            class="styles__1pgyf3tk"
          >
            <div
              class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
            >
              <svg
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz7 uv_icons_1sbwqkzf uv_icons_1sbwqkz1g"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <title>
                  CalculatorIcon
                </title>
                <path
                  clip-rule="evenodd"
                  d="M10 2q-2.29.002-4.507.276a1.965 1.965 0 0 0-1.715 1.961V16a2 2 0 0 0 2 2h8.444a2 2 0 0 0 2-2V4.237c0-.98-.716-1.838-1.715-1.961A37 37 0 0 0 10 2M6.436 8.889c0-.368.298-.667.666-.667h.01c.368 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.666 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.01a.667.667 0 0 0 .666-.666v-.01a.667.667 0 0 0-.667-.666zm-.666 2.592c0-.368.298-.667.666-.667h.01c.368 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zM7.102 14a.667.667 0 0 0-.666.667v.008c0 .369.298.667.666.667h.01a.667.667 0 0 0 .666-.667v-.008A.667.667 0 0 0 7.111 14zm1.26-5.111c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.666 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.01a.667.667 0 0 0 .666-.666v-.01a.667.667 0 0 0-.667-.666zm-.666 2.592c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zM9.028 14a.667.667 0 0 0-.666.667v.008c0 .369.298.667.666.667h.01a.667.667 0 0 0 .666-.667v-.008A.667.667 0 0 0 9.037 14zm1.263-5.111c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.666 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.01a.667.667 0 0 0 .666-.666v-.01a.667.667 0 0 0-.667-.666zm-.666 2.592c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zM10.957 14a.667.667 0 0 0-.666.667v.008c0 .369.298.667.666.667h.01a.667.667 0 0 0 .666-.667v-.008a.667.667 0 0 0-.667-.667zm1.265-5.111c0-.368.299-.667.667-.667h.009c.368 0 .667.299.667.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.667 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.009a.667.667 0 0 0 .667-.666v-.01a.667.667 0 0 0-.667-.666zm0 1.925c.368 0 .667.299.667.667v1.926a.667.667 0 1 1-1.333 0V12.74c0-.368.298-.667.666-.667M7.111 4.667a.667.667 0 0 0-.667.666v.445c0 .368.299.666.667.666h5.778a.667.667 0 0 0 .667-.666v-.445a.667.667 0 0 0-.667-.666z"
                  fill-rule="evenodd"
                />
              </svg>
              Estimated cost
            </div>
            <div
              class="components__1oy0ow48 components_isOverlay_false__1oy0ow4a"
            >
              <div
                class="components__1oy0ow4h components_isOverlay_false__1oy0ow4i components_variant_big__1oy0ow4k components__1oy0ow4o components_variant_big__1oy0ow4p"
              >
                <span
                  class=""
                >
                  €0.00/Hour(s)
                </span>
              </div>
            </div>
          </li>
        </ul>
      </div>
      <span
        class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
      >
        This summary provides a cost estimation based on your configuration, the amount of time you expect to use the resource for, and the scale of your expected usage. For the purposes of this calculation, we consider that 1 month equals to 730 hours.
      </span>
      <div>
        <table
          cellpadding="0"
          cellspacing="0"
          class="styles_total__1pgyf3t5 styles__1pgyf3t3"
          data-testid="summary"
        >
          <colgroup>
            <col />
            <col
              class="styles__1pgyf3t7"
            />
          </colgroup>
          <thead>
            <tr>
              <th>
                <h3
                  class="styles__1pgyf3te"
                >
                  <svg
                    class="styles__1pgyf3ts uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz7 uv_icons_1sbwqkzf uv_icons_1sbwqkz1g"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <title>
                      CalculatorIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M10 2q-2.29.002-4.507.276a1.965 1.965 0 0 0-1.715 1.961V16a2 2 0 0 0 2 2h8.444a2 2 0 0 0 2-2V4.237c0-.98-.716-1.838-1.715-1.961A37 37 0 0 0 10 2M6.436 8.889c0-.368.298-.667.666-.667h.01c.368 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.666 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.01a.667.667 0 0 0 .666-.666v-.01a.667.667 0 0 0-.667-.666zm-.666 2.592c0-.368.298-.667.666-.667h.01c.368 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zM7.102 14a.667.667 0 0 0-.666.667v.008c0 .369.298.667.666.667h.01a.667.667 0 0 0 .666-.667v-.008A.667.667 0 0 0 7.111 14zm1.26-5.111c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.666 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.01a.667.667 0 0 0 .666-.666v-.01a.667.667 0 0 0-.667-.666zm-.666 2.592c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zM9.028 14a.667.667 0 0 0-.666.667v.008c0 .369.298.667.666.667h.01a.667.667 0 0 0 .666-.667v-.008A.667.667 0 0 0 9.037 14zm1.263-5.111c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.666 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.01a.667.667 0 0 0 .666-.666v-.01a.667.667 0 0 0-.667-.666zm-.666 2.592c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zM10.957 14a.667.667 0 0 0-.666.667v.008c0 .369.298.667.666.667h.01a.667.667 0 0 0 .666-.667v-.008a.667.667 0 0 0-.667-.667zm1.265-5.111c0-.368.299-.667.667-.667h.009c.368 0 .667.299.667.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.667 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.009a.667.667 0 0 0 .667-.666v-.01a.667.667 0 0 0-.667-.666zm0 1.925c.368 0 .667.299.667.667v1.926a.667.667 0 1 1-1.333 0V12.74c0-.368.298-.667.666-.667M7.111 4.667a.667.667 0 0 0-.667.666v.445c0 .368.299.666.667.666h5.778a.667.667 0 0 0 .667-.666v-.445a.667.667 0 0 0-.667-.666z"
                      fill-rule="evenodd"
                    />
                  </svg>
                  Estimated cost
                </h3>
              </th>
              <th
                class="styles__1pgyf3tt styles__1pgyf3t8"
              >
                <div
                  class="styles__1pgyf3tg"
                >
                  <div
                    class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
                    style="--_4k0ekn0: 100%;"
                  >
                    <div
                      class="styles_medium__gwf0fld styles_default__gwf0fl6 styles__gwf0fl5 styles__x6hyh50"
                      style="--_3mg8xe0: auto auto; --_3mg8xe1: auto auto; --_3mg8xe2: auto auto; --_3mg8xe3: auto auto; --_3mg8xe4: auto auto; --_3mg8xe5: auto auto;"
                    >
                      <div
                        class="styles__gwf0flb"
                        id="input-field"
                      >
                        <input
                          aria-invalid="false"
                          class="styles_medium__gwf0fl3 styles__gwf0fl1"
                          data-testid="unit-input"
                          id="_r_i_"
                          max="9007199254740991"
                          min="1"
                          name="iteration-value"
                          placeholder="0"
                          step="1"
                          type="number"
                          value="1"
                        />
                      </div>
                      <div
                        aria-label="iteration-unit"
                        class="styles__gwf0flg styles__gwf0flf styles__uf6pag0"
                        style="--gwf0fl0: 100%;"
                      >
                        <div
                          aria-controls="_r_m_"
                          aria-describedby="_r_m_"
                          class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
                          tabindex="-1"
                        >
                          <div
                            class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
                          >
                            <div
                              aria-controls="_r_m_"
                              aria-expanded="false"
                              class="selectBar__r8qe46 selectBar__r8qe45 selectBar_size_medium__r8qe4b selectBar_state_neutral__r8qe4e"
                              data-disabled="false"
                              data-readonly="false"
                              data-testid="select-input-iteration-unit"
                              id="unit"
                              role="combobox"
                              tabindex="0"
                            >
                              <span
                                class="selectBar__r8qe4m style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
                              >
                                Hour(s)
                              </span>
                              <div
                                class="selectBar_small__r8qe43 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
                              >
                                <svg
                                  aria-label="show dropdown"
                                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                                  height="16"
                                  viewBox="0 0 16 16"
                                  width="16"
                                >
                                  <title>
                                    ArrowDownIcon
                                  </title>
                                  <path
                                    clip-rule="evenodd"
                                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="components__1oy0ow43"
            >
              <td
                class="styles__1pgyf3t9"
                style="--_1pgyf3t0: 16px;"
              >
                <div
                  class="components__1oy0ow45"
                >
                  <div
                    class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d"
                  >
                    <div
                      class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
                    >
                      <p
                        class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
                      >
                        Availability Zone
                      </p>
                    </div>
                  </div>
                  <div
                    class="components__1oy0ow48 components_isOverlay_false__1oy0ow4a"
                  >
                    <div
                      class="components__1oy0ow4h components_isOverlay_false__1oy0ow4i components_variant_normal__1oy0ow4m components__1oy0ow4o components_variant_normal__1oy0ow4r"
                    >
                      <img
                        alt="nl-ams-1"
                        class="styles__1pgyf3t2"
                        height="auto"
                        src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20fill='none'%20viewBox='0%200%2024%2024'%3e%3cpath%20fill='%23F0F0F0'%20d='M12%2024c6.627%200%2012-5.373%2012-12S18.627%200%2012%200%200%205.373%200%2012s5.373%2012%2012%2012'/%3e%3cpath%20fill='%23D80027'%20d='M24%2012c0-5.16-3.256-9.558-7.826-11.254v22.508C20.744%2021.558%2024%2017.16%2024%2012'/%3e%3cpath%20fill='%230052B4'%20d='M0%2012c0%205.16%203.257%209.558%207.826%2011.254V.746C3.256%202.442%200%206.84%200%2012'/%3e%3c/svg%3e"
                        width="auto"
                      />
                      nl-ams-1
                    </div>
                  </div>
                </div>
              </td>
              <td
                class="styles__1pgyf3t9 styles__1pgyf3t8"
                style="--_1pgyf3t0: 16px;"
              >
                <p
                  class="style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
                  style="--textAlign__qabug40: right;"
                >
                  €0.00
                </p>
              </td>
            </tr>
          </tbody>
        </table>
        <table
          cellpadding="0"
          cellspacing="0"
          class="styles__1pgyf3td"
        >
          <colgroup>
            <col />
            <col
              class="styles__1pgyf3t7"
            />
          </colgroup>
          <tbody>
            <tr>
              <td
                aria-label="control"
                class="styles__1pgyf3tf"
              />
              <td
                class="styles__1pgyf3t9 styles__1pgyf3tc"
                style="--_1pgyf3t0: 16px;"
              >
                <h3
                  class="styles__1pgyf3tq style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_primary__m4c9owc style_variant_heading__m4c9ow11 style_undefined_compound_0__m4c9ow1a style_undefined_compound_40__m4c9ow2e"
                >
                  <span
                    class=""
                  >
                    €0.00
                  </span>
                </h3>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`estimateCost - Zone > render zone component 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_default__1pgyf3t10 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_1rem_xxsmall__toi52u3v"
    >
      <div
        class="styles__1pgyf3tu styles_inView_false__1pgyf3tv"
        data-testid="summary-overlay"
        style="--_1pgyf3t1: 0;"
      >
        <ul
          class="styles__1pgyf3tx"
        >
          <li
            class="styles__1pgyf3tk styles_isFirstElement_true__1pgyf3tm"
          >
            <div
              class="styles__1pgyf3t9"
              style="--_1pgyf3t0: 16px;"
            >
              <div
                class=""
              >
                <div
                  class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d"
                >
                  <div
                    class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
                  >
                    <p
                      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
                    >
                      Availability Zone
                    </p>
                  </div>
                </div>
                <div
                  class="components__1oy0ow48 components_isOverlay_true__1oy0ow4b"
                >
                  <div
                    class="components__1oy0ow4h components_isOverlay_false__1oy0ow4i components_variant_normal__1oy0ow4m components__1oy0ow4o components_variant_normal__1oy0ow4r"
                  >
                    <img
                      alt="fr-par-1"
                      class="styles__1pgyf3t2"
                      height="auto"
                      src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20fill='none'%20viewBox='0%200%2024%2024'%3e%3cpath%20fill='%23F0F0F0'%20d='M12%2024c6.627%200%2012-5.373%2012-12S18.627%200%2012%200%200%205.373%200%2012s5.373%2012%2012%2012'/%3e%3cpath%20fill='%23D80027'%20d='M24%2012c0-5.16-3.256-9.558-7.826-11.254v22.508C20.744%2021.558%2024%2017.16%2024%2012'/%3e%3cpath%20fill='%230052B4'%20d='M0%2012c0%205.16%203.257%209.558%207.826%2011.254V.746C3.256%202.442%200%206.84%200%2012'/%3e%3c/svg%3e"
                      width="auto"
                    />
                    fr-par-1
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            class="styles__1pgyf3tk"
          >
            <div
              class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
            >
              <svg
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz7 uv_icons_1sbwqkzf uv_icons_1sbwqkz1g"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <title>
                  CalculatorIcon
                </title>
                <path
                  clip-rule="evenodd"
                  d="M10 2q-2.29.002-4.507.276a1.965 1.965 0 0 0-1.715 1.961V16a2 2 0 0 0 2 2h8.444a2 2 0 0 0 2-2V4.237c0-.98-.716-1.838-1.715-1.961A37 37 0 0 0 10 2M6.436 8.889c0-.368.298-.667.666-.667h.01c.368 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.666 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.01a.667.667 0 0 0 .666-.666v-.01a.667.667 0 0 0-.667-.666zm-.666 2.592c0-.368.298-.667.666-.667h.01c.368 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zM7.102 14a.667.667 0 0 0-.666.667v.008c0 .369.298.667.666.667h.01a.667.667 0 0 0 .666-.667v-.008A.667.667 0 0 0 7.111 14zm1.26-5.111c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.666 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.01a.667.667 0 0 0 .666-.666v-.01a.667.667 0 0 0-.667-.666zm-.666 2.592c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zM9.028 14a.667.667 0 0 0-.666.667v.008c0 .369.298.667.666.667h.01a.667.667 0 0 0 .666-.667v-.008A.667.667 0 0 0 9.037 14zm1.263-5.111c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.666 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.01a.667.667 0 0 0 .666-.666v-.01a.667.667 0 0 0-.667-.666zm-.666 2.592c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zM10.957 14a.667.667 0 0 0-.666.667v.008c0 .369.298.667.666.667h.01a.667.667 0 0 0 .666-.667v-.008a.667.667 0 0 0-.667-.667zm1.265-5.111c0-.368.299-.667.667-.667h.009c.368 0 .667.299.667.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.667 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.009a.667.667 0 0 0 .667-.666v-.01a.667.667 0 0 0-.667-.666zm0 1.925c.368 0 .667.299.667.667v1.926a.667.667 0 1 1-1.333 0V12.74c0-.368.298-.667.666-.667M7.111 4.667a.667.667 0 0 0-.667.666v.445c0 .368.299.666.667.666h5.778a.667.667 0 0 0 .667-.666v-.445a.667.667 0 0 0-.667-.666z"
                  fill-rule="evenodd"
                />
              </svg>
              Estimated cost
            </div>
            <div
              class="components__1oy0ow48 components_isOverlay_false__1oy0ow4a"
            >
              <div
                class="components__1oy0ow4h components_isOverlay_false__1oy0ow4i components_variant_big__1oy0ow4k components__1oy0ow4o components_variant_big__1oy0ow4p"
              >
                <span
                  class=""
                >
                  €0.00/Hour(s)
                </span>
              </div>
            </div>
          </li>
        </ul>
      </div>
      <span
        class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
      >
        This summary provides a cost estimation based on your configuration, the amount of time you expect to use the resource for, and the scale of your expected usage. For the purposes of this calculation, we consider that 1 month equals to 730 hours.
      </span>
      <div>
        <table
          cellpadding="0"
          cellspacing="0"
          class="styles_total__1pgyf3t5 styles__1pgyf3t3"
          data-testid="summary"
        >
          <colgroup>
            <col />
            <col
              class="styles__1pgyf3t7"
            />
          </colgroup>
          <thead>
            <tr>
              <th>
                <h3
                  class="styles__1pgyf3te"
                >
                  <svg
                    class="styles__1pgyf3ts uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz7 uv_icons_1sbwqkzf uv_icons_1sbwqkz1g"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <title>
                      CalculatorIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M10 2q-2.29.002-4.507.276a1.965 1.965 0 0 0-1.715 1.961V16a2 2 0 0 0 2 2h8.444a2 2 0 0 0 2-2V4.237c0-.98-.716-1.838-1.715-1.961A37 37 0 0 0 10 2M6.436 8.889c0-.368.298-.667.666-.667h.01c.368 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.666 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.01a.667.667 0 0 0 .666-.666v-.01a.667.667 0 0 0-.667-.666zm-.666 2.592c0-.368.298-.667.666-.667h.01c.368 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zM7.102 14a.667.667 0 0 0-.666.667v.008c0 .369.298.667.666.667h.01a.667.667 0 0 0 .666-.667v-.008A.667.667 0 0 0 7.111 14zm1.26-5.111c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.666 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.01a.667.667 0 0 0 .666-.666v-.01a.667.667 0 0 0-.667-.666zm-.666 2.592c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zM9.028 14a.667.667 0 0 0-.666.667v.008c0 .369.298.667.666.667h.01a.667.667 0 0 0 .666-.667v-.008A.667.667 0 0 0 9.037 14zm1.263-5.111c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.666 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.01a.667.667 0 0 0 .666-.666v-.01a.667.667 0 0 0-.667-.666zm-.666 2.592c0-.368.298-.667.666-.667h.01c.367 0 .666.299.666.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zM10.957 14a.667.667 0 0 0-.666.667v.008c0 .369.298.667.666.667h.01a.667.667 0 0 0 .666-.667v-.008a.667.667 0 0 0-.667-.667zm1.265-5.111c0-.368.299-.667.667-.667h.009c.368 0 .667.299.667.667v.009a.667.667 0 0 1-.667.666h-.009a.667.667 0 0 1-.666-.666zm.667 1.26a.667.667 0 0 0-.666.666v.009c0 .368.298.666.666.666h.009a.667.667 0 0 0 .667-.666v-.01a.667.667 0 0 0-.667-.666zm0 1.925c.368 0 .667.299.667.667v1.926a.667.667 0 1 1-1.333 0V12.74c0-.368.298-.667.666-.667M7.111 4.667a.667.667 0 0 0-.667.666v.445c0 .368.299.666.667.666h5.778a.667.667 0 0 0 .667-.666v-.445a.667.667 0 0 0-.667-.666z"
                      fill-rule="evenodd"
                    />
                  </svg>
                  Estimated cost
                </h3>
              </th>
              <th
                class="styles__1pgyf3tt styles__1pgyf3t8"
              >
                <div
                  class="styles__1pgyf3tg"
                >
                  <div
                    class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
                    style="--_4k0ekn0: 100%;"
                  >
                    <div
                      class="styles_medium__gwf0fld styles_default__gwf0fl6 styles__gwf0fl5 styles__x6hyh50"
                      style="--_3mg8xe0: auto auto; --_3mg8xe1: auto auto; --_3mg8xe2: auto auto; --_3mg8xe3: auto auto; --_3mg8xe4: auto auto; --_3mg8xe5: auto auto;"
                    >
                      <div
                        class="styles__gwf0flb"
                        id="input-field"
                      >
                        <input
                          aria-invalid="false"
                          class="styles_medium__gwf0fl3 styles__gwf0fl1"
                          data-testid="unit-input"
                          id="_r_3_"
                          max="9007199254740991"
                          min="1"
                          name="iteration-value"
                          placeholder="0"
                          step="1"
                          type="number"
                          value="1"
                        />
                      </div>
                      <div
                        aria-label="iteration-unit"
                        class="styles__gwf0flg styles__gwf0flf styles__uf6pag0"
                        style="--gwf0fl0: 100%;"
                      >
                        <div
                          aria-controls="_r_7_"
                          aria-describedby="_r_7_"
                          class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
                          tabindex="-1"
                        >
                          <div
                            class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
                          >
                            <div
                              aria-controls="_r_7_"
                              aria-expanded="false"
                              class="selectBar__r8qe46 selectBar__r8qe45 selectBar_size_medium__r8qe4b selectBar_state_neutral__r8qe4e"
                              data-disabled="false"
                              data-readonly="false"
                              data-testid="select-input-iteration-unit"
                              id="unit"
                              role="combobox"
                              tabindex="0"
                            >
                              <span
                                class="selectBar__r8qe4m style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
                              >
                                Hour(s)
                              </span>
                              <div
                                class="selectBar_small__r8qe43 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
                              >
                                <svg
                                  aria-label="show dropdown"
                                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                                  height="16"
                                  viewBox="0 0 16 16"
                                  width="16"
                                >
                                  <title>
                                    ArrowDownIcon
                                  </title>
                                  <path
                                    clip-rule="evenodd"
                                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="components__1oy0ow43"
            >
              <td
                class="styles__1pgyf3t9"
                style="--_1pgyf3t0: 16px;"
              >
                <div
                  class="components__1oy0ow45"
                >
                  <div
                    class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d"
                  >
                    <div
                      class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
                    >
                      <p
                        class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
                      >
                        Availability Zone
                      </p>
                    </div>
                  </div>
                  <div
                    class="components__1oy0ow48 components_isOverlay_false__1oy0ow4a"
                  >
                    <div
                      class="components__1oy0ow4h components_isOverlay_false__1oy0ow4i components_variant_normal__1oy0ow4m components__1oy0ow4o components_variant_normal__1oy0ow4r"
                    >
                      <img
                        alt="fr-par-1"
                        class="styles__1pgyf3t2"
                        height="auto"
                        src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20fill='none'%20viewBox='0%200%2024%2024'%3e%3cpath%20fill='%23F0F0F0'%20d='M12%2024c6.627%200%2012-5.373%2012-12S18.627%200%2012%200%200%205.373%200%2012s5.373%2012%2012%2012'/%3e%3cpath%20fill='%23D80027'%20d='M24%2012c0-5.16-3.256-9.558-7.826-11.254v22.508C20.744%2021.558%2024%2017.16%2024%2012'/%3e%3cpath%20fill='%230052B4'%20d='M0%2012c0%205.16%203.257%209.558%207.826%2011.254V.746C3.256%202.442%200%206.84%200%2012'/%3e%3c/svg%3e"
                        width="auto"
                      />
                      fr-par-1
                    </div>
                  </div>
                </div>
              </td>
              <td
                class="styles__1pgyf3t9 styles__1pgyf3t8"
                style="--_1pgyf3t0: 16px;"
              >
                <p
                  class="style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
                  style="--textAlign__qabug40: right;"
                >
                  €0.00
                </p>
              </td>
            </tr>
          </tbody>
        </table>
        <table
          cellpadding="0"
          cellspacing="0"
          class="styles__1pgyf3td"
        >
          <colgroup>
            <col />
            <col
              class="styles__1pgyf3t7"
            />
          </colgroup>
          <tbody>
            <tr>
              <td
                aria-label="control"
                class="styles__1pgyf3tf"
              />
              <td
                class="styles__1pgyf3t9 styles__1pgyf3tc"
                style="--_1pgyf3t0: 16px;"
              >
                <h3
                  class="styles__1pgyf3tq style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_primary__m4c9owc style_variant_heading__m4c9ow11 style_undefined_compound_0__m4c9ow1a style_undefined_compound_40__m4c9ow2e"
                >
                  <span
                    class=""
                  >
                    €0.00
                  </span>
                </h3>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
